# obsForge

./: .flake8  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  requirements.txt
.github/workflows/: build.yaml  pytest.yaml
bundle/: CMakeLists.txt
jobs/: JOBSFORGE_GLOBAL_AOD_DUMP  JOBSFORGE_GLOBAL_ATMOS_BUFR_DUMP  JOBSFORGE_GLOBAL_MARINE_BUFR_DUMP  JOBSFORGE_GLOBAL_MARINE_DUMP
jobs/rocoto/: aoddump.sh  atmosbufrdump.sh  marinebufrdump.sh  marinedump.sh
modulefiles/obsforge/: gaeac5.intel.lua  gaeac6.intel.lua  hera.intel.lua  hercules.gnu.lua  hercules.intel.lua  noaacloud.intel.lua  orion.intel.lua  ursa.intel.lua  wcoss2.intel.lua
parm/: atmos_bufr_dump_config.yaml  bufr2ioda_template.yaml.j2  config.hera.yaml  config.hercules.yaml  config.orion.yaml  config.ursa.yaml  config.wcoss2.yaml  config.yaml  gdas_realtime.xml.j2  gfs_realtime.xml.j2  marine_bufr_dump_config.yaml  obsforge_rocoto_template.xml.j2  obsforge_rocoto_template_pbspro.xml.j2  obsforge_rocoto_template_pbspro_realtime.xml.j2  obsforge_test_hera.xml
parm/nc2ioda/: nc2ioda.yaml.j2
scripts/: exobsforge_global_aod_dump.py  exobsforge_global_atmos_bufr_dump.py  exobsforge_global_marine_bufr_dump.py  exobsforge_global_marine_dump.py
scripts/tests/: conftest.py  dcom_tree.txt  test_exobsforge_global_dump.py  test_exobsforge_global_marine_dump.py
test/: CMakeLists.txt  generate_job_script.py
test/atmos/: CMakeLists.txt  run_test_obsforge_global_atmos_bufr_dump.sh
test/hosts/: gaeac6.yaml  hera.yaml  hercules.yaml  orion.yaml  unknown.yaml  ursa.yaml  wcoss2.yaml
test/testinput/: bufr_bufr4backend_acft_profiles_prepbufr.yaml  bufr_bufr4backend_acft_profiles_prepbufr_mpi0.yaml  bufr_bufr4backend_acft_profiles_prepbufr_mpi4.yaml  bufr_bufr4backend_adpsfc_prepbufr.yaml  bufr_bufr4backend_adpsfc_prepbufr_mpi0.yaml  bufr_bufr4backend_adpsfc_prepbufr_mpi4.yaml  bufr_bufr4backend_atms.yaml  bufr_bufr4backend_atms_mpi4.yaml  bufr_bufr4backend_mtiasi.yaml  bufr_bufr4backend_mtiasi_mpi4.yaml  bufr_bufr4backend_satwnd_amv_abi.yaml  bufr_bufr4backend_satwnd_amv_abi_mpi4.yaml  bufr_bufr4backend_satwnd_amv_goes.yaml  bufr_bufr4backend_satwnd_amv_goes_mpi4.yaml  bufr_bufr4backend_satwnd_amv_leogeo.yaml  bufr_bufr4backend_satwnd_amv_leogeo_mpi4.yaml  bufr_bufr4backend_satwnd_amv_seviri.yaml  bufr_bufr4backend_satwnd_amv_seviri_mpi4.yaml  bufr_bufr4backend_satwnd_amv_viirs.yaml  bufr_bufr4backend_satwnd_amv_viirs_mpi4.yaml  bufr_bufr4backend_sfcshp_prepbufr.yaml  bufr_bufr4backend_sfcshp_prepbufr_mpi0.yaml  bufr_bufr4backend_sfcshp_prepbufr_mpi4.yaml  bufr_bufr4backend_sfcsno.yaml  bufr_bufr4backend_sfcsno_mpi2.yaml  bufr_bufr_backend_satwnd_amv_goes.yaml  bufr_bufr_backend_satwnd_amv_goes_mpi4.yaml  bufr_bufr_backend_sfcsno.yaml  bufr_bufr_backend_sfcsno_mpi2.yaml  bufr_script4backend_acft_profiles_prepbufr.yaml  bufr_script4backend_acft_profiles_prepbufr_mpi0.yaml  bufr_script4backend_acft_profiles_prepbufr_mpi4.yaml  bufr_script4backend_adpsfc_prepbufr.yaml  bufr_script4backend_adpsfc_prepbufr_mpi0.yaml  bufr_script4backend_adpsfc_prepbufr_mpi4.yaml  bufr_script4backend_atms.yaml  bufr_script4backend_atms_mpi4.yaml  bufr_script4backend_mtiasi.yaml  bufr_script4backend_mtiasi_mpi4.yaml  bufr_script4backend_satwnd_amv_abi.yaml  (+18 more)
tools/build_scripts/: CMakeLists.txt
ush/: detect_machine.sh  jjob_header.sh  load_obsforge_modules.sh  module-setup.sh  of_setup.sh  preamble.sh  setup_xml.py  stage_comin_obsproc.sh
ush/python/: wxflow
ush/python/pyobsforge/: __init__.py
ush/python/pyobsforge/obsdb/: __init__.py  ghrsst_db.py  jrr_aod_db.py  nesdis_amsr2_db.py  nesdis_jpssrr_db.py  nesdis_mirs_db.py  obsdb.py  rads_db.py  smap_db.py  smos_db.py
ush/python/pyobsforge/task/: aero_prepobs.py  atmos_bufr_prepobs.py  marine_bufr_prepobs.py  marine_prepobs.py  providers.py  run_nc2ioda.py  sfcshp.py
ush/python/pyobsforge/tests/: test_ghrsst_database.py  test_jrr_aod_database.py  test_nesdis_amsr2_database.py  test_nesdis_jpssrr_database.py  test_nesdis_mirs_database.py  test_rads_database.py  test_smap_database.py  test_smos_database.py  (+1 more)
utils/: CMakeLists.txt
utils/b2i/: argo_ioda_variables.py  bathy_ioda_variables.py  bufr2ioda_insitu_profile_argo.py  bufr2ioda_insitu_profile_glider.py  bufr2ioda_insitu_profile_pirata.py  bufr2ioda_insitu_profile_rama.py  bufr2ioda_insitu_profile_taotriton.py  bufr2ioda_insitu_salt_profile_argo.py  bufr2ioda_insitu_surface_dbuoyb_drifter.py  bufr2ioda_insitu_surface_drifter.py  bufr2ioda_insitu_surface_trkob.py  bufr2ioda_insitu_temp_profile_argo.py  dbuoyb_drifter_ioda_variables.py  dbuoyb_surface_ioda_variables.py  drifter_ioda_variables.py  glider_ioda_variables.py  mbuoyb_tropical_ioda_variables.py  tesac_ioda_variables.py  trkob_ioda_variables.py  tropical_ioda_variables.py  wmo_codes.py  xbtctd_ioda_variables.py
utils/b2i/b2iconverter/: bufr2ioda_config.py  bufr2ioda_converter.py  ioda_variables.py  ocean.py  util.py
utils/b2i/test/: CMakeLists.txt
utils/b2i/test/testinput/: bufr2ioda_insitu_profile_pirata_2025061900.yaml.in  bufr2ioda_insitu_profile_rama_2025061900.yaml.in  bufr2ioda_insitu_profile_taotriton_2025061900.yaml.in  bufr2ioda_insitu_surface_dbuoyb_drifter_2019010700.yaml.in
utils/b2i/test/testref/: bufr2ioda_insitu_profile_pirata_2025061900.ref  bufr2ioda_insitu_profile_rama_2025061900.ref  bufr2ioda_insitu_profile_taotriton_2025061900.ref  bufr2ioda_insitu_surface_dbuoyb_drifter_2019010700.ref
utils/preproc/: CMakeLists.txt  Ghrsst2Ioda.h  IcecAbi2Ioda.h  IcecAmsr2Ioda.h  IcecJpssrr2Ioda.h  IcecMirs2Ioda.h  InsituAll2ioda.h  NetCDFToIodaConverter.h  RTOFSInSitu.h  RTOFSSalinity.h  RTOFSTemperature.h  Rads2Ioda.h  Smap2Ioda.h  Smos2Ioda.h  Viirsaod2Ioda.h  superob.h  util.h  wodS2Ioda.h  wodT2Ioda.h
utils/preproc/applications/: CMakeLists.txt  obsprovider2ioda.cc  obsprovider2ioda.h
utils/preproc/rtofs/: CMakeLists.txt  RTOFSDataFile.cc  RTOFSDataFile.h  RTOFSOb.cc  RTOFSOb.h  util.cc  util.h
utils/test/: CMakeLists.txt  prepdata.sh
utils/test/testref/: icecamsr2ioda.test  insituall2ioda.test  rads2ioda.test
(+1 files in other folders)
